CFibers - Implement Dynamic System Bars [2/2]
This commit implements DSB. Simple as that.

P.S. 2 Fix up wrong positioning
P.S. 3 Move in an own panel under UI category

Change-Id: Idd732f3583544fb38ceaa691ac0d45e88f9e340d

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1230,4 +1230,15 @@
     <string name="status_bar_six_bar_signal_title">Enable Six Bar Signal</string>
     <string name="status_bar_six_bar_signal_summary">Enable to show six bar signal in statusbar/qs</string>
 
+<!-- Dynamic system bars -->
+    <string name="dynamic_system_bars_category_title">Dynamic system bars</string>
+    <string name="dynamic_status_bar_title">Dynamic status bar</string>
+    <string name="dynamic_status_bar_summary">Automatically update the background of the status bar</string>
+    <string name="dynamic_navigation_bar_title">Dynamic navigation bar</string>
+    <string name="dynamic_navigation_bar_summary">Automatically update the background of the navigation bar</string>
+    <string name="dynamic_system_bars_gradient_title">System bar gradient</string>
+    <string name="dynamic_system_bars_gradient_summary">Overlay a gradient on the system bars</string>
+    <string name="dynamic_status_bar_filter_title">Darker status bar</string>
+    <string name="dynamic_status_bar_filter_summary">Overlay a darkening filter on the status bar</string>
+
 </resources>
